--- a/Firulai/web/templates/web/base.html
+++ b/Firulai/web/templates/web/base.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="{% url 'index' %}">Index</a></li>
                 <li><a href="{% url 'Refugio_1' %}">Refugio N°1</a></li>
-                <li><a href="{% url 'FormularioAdop' %}">Formulario de Adopción</a></li>
+                <li><a href="{% url 'alta_postulante' %}">Formulario de Adopción</a></li>
                 <li><a href="{% url 'Contacto' %}">Formulario de Adopción</a></li>
             </ul>
         </nav>
