--- a/Firulai/web/templates/web/index.html
+++ b/Firulai/web/templates/web/index.html
@@ -1,16 +1,15 @@
 {% extends "web/base.html" %}
 {% load static %}
-
-{% block titulo %}FIRULAI{% endblock %}
+{% block titulo %}Aula Virtual 2.0{% endblock %}
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'web/styles/index.css' %}">
 {% endblock %}
+{% block main %}    
+    <h2>Bienvenid@ {{nombre | upper}}</h2> 
+    <img src="{% static 'web/img/firu_01.jpg' %}" alt="">
 
-{% block main %}
-    <h1>Firulai: El refugio de las Mascotas</h1>
-    <p>{{ fecha_hora }}</p>
-
-    
 {% endblock %}
+{% block footer %}Pagina de Inicio{% endblock %}
+
 
 
