actualizacion de formulario de postulante, css basico y correcciones

--- a/Firulai/web/templates/web/base.html
+++ b/Firulai/web/templates/web/base.html
@@ -17,9 +17,9 @@
         <nav>
             <ul>
                 <li><a href="{% url 'index' %}">Index</a></li>
-                <li><a href="{% url 'Refugio_1' %}">Refugio N°1</a></li>
+                <li><a href="{% url 'Refugio_1' %}">Sobre Firulais</a></li>
                 <li><a href="{% url 'alta_postulante' %}">Formulario de Adopción</a></li>
-                <li><a href="{% url 'Contacto' %}">Formulario de Adopción</a></li>
+                <li><a href="{% url 'Contacto' %}">Contacto</a></li>
             </ul>
         </nav>
     </header>
