actualizacion form adopcion, html mascota y modelos parcial

--- a/Firulai/web/templates/web/base.html
+++ b/Firulai/web/templates/web/base.html
@@ -19,6 +19,7 @@
                 <li><a href="{% url 'index' %}">Index</a></li>
                 <li><a href="{% url 'Refugio_1' %}">Sobre Firulais</a></li>
                 <li><a href="{% url 'alta_postulante' %}">Formulario de Adopción</a></li>
+                <li><a href="{% url 'alta_mascota' %}">Contacto</a></li>
                 <li><a href="{% url 'Contacto' %}">Contacto</a></li>
             </ul>
         </nav>
