--- a/Firulai/web/templates/web/alta_mascota.html
+++ b/Firulai/web/templates/web/alta_mascota.html
@@ -1,16 +1,16 @@
 {% extends "web/base.html" %}
 {% load static %}
 
-{% block titulo %}FIRULAI - Alta Postulante{% endblock %}
+{% block titulo %}FIRULAI - Alta Mascota{% endblock %}
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'web/styles/index.css' %}">
 {% endblock %}
 
 {% block main %}
 <h2>Alta de Postulante</h2>
-<form method="POST" action="{% url 'alta_postulante' %}">
+<form method="POST" action="{% url 'alta_mascota' %}">
     {% csrf_token %}
-    {{alta_postulante.as_p}} 
+    {{alta_mascota.as_p}} 
     
 
     <input type="submit">
